src/test/resources/30/single/xhtml/invalid/switch-no-case.xhtml
<?xml version="1.0" encoding="UTF-8"?>
<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en"
    xmlns:epub="http://www.idpf.org/2007/ops">
    <head>
        <title>switch invalid</title>
    </head>
    <body>
        
        <epub:switch>
            <epub:default> foo <span>bar</span>
                <em>baz</em>
            </epub:default>
            <!-- epub:case is missing -->
        </epub:switch>
        
    </body>
</html>

